@@ -30,6 +30,8 @@ Version 1.2
 
 - Added the Monokai style (#453).
 
+- Fixed LLVM lexer identifier syntax and added new keywords (#442).
+
 - Fixed the PythonTracebackLexer to handle non-traceback data in header or
   trailer, and support more partial tracebacks that start on line 2 (#437).
 
